# ComfyUI_SimpleButcher

./: CHANGELOG.md  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
js/: SimpleLoadImageWithMetadata.js  SimpleLoadImagesFromDir.js  SimpleLoadLineFromTextFile.js  SimpleLoraLoader.js
nodes/: nodes.py
workflows/: 1_flux_workflow.json  2_flux_workflow_LLM.json  3_upscaler.json  flux_workflow_test.json  lora_test.txt  prompt_test.txt
